# register-mcp

./: CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  README.de.md  README.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/demo/: README.md  demo.html  demo.py  demo.tape
src/register_mcp/: server.py
tests/: test_server.py
